fixed titles spacing

--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,7 @@ h1 {
   a {
     color: inherit;
     text-decoration: none;
+    line-height: 1.2;
   }
 }
 
